updatw basket.html
back to the nav bar ive added the links at the top of the page the logo of the business and im going to continue working on that now

--- a/public/basket.html
+++ b/public/basket.html
@@ -168,5 +168,27 @@
 </head>
 <body>
 
+<body>
+    <!-- The Header Section -->
+    <header>
+        <nav class="navbar">
+            <a class="navbar-brand" href="index.html">
+                <img src="images/logo.jpg" alt="Pup & Purr Logo">
+                <span style="color: #426b1f; font-size: 28px; font-weight: bold;">Pup & Purr</span>
+            </a>
+
+            <div class="navbar-links">
+                <a href="index.html">Home</a>
+                <a href="shop.html">Shop</a>
+                <a href="about.html">About Us</a>
+                <a href="contact.html">Contact Us</a>
+            </div>
+
+            <div class="navbar-icons">
+                <a href="account.html"><i class="fa fa-user"></i></a>
+                <a href="basket.html"><i class="fa fa-shopping-basket"></i></a>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
