basket.html + photos
back to the basket again its coming together now added the products and costs and some photos for the time being which will be changed later and will continue expanding on this

--- a/public/basket.html
+++ b/public/basket.html
@@ -190,5 +190,27 @@
             </div>
         </nav>
     </header>
+
+    <!-- THE Basket Section -->
+    <main class="basket-container">
+        <section class="basket-items">
+            <h1 class="basket-title">Basket</h1>
+            <div class="item">
+                <img src="images/cat bed.webp" alt="Cat Bed">
+                <p class="item-name">Cat Bed</p>
+                <p class="item-price">£15.99</p>
+            </div>
+            <div class="item">
+                <img src="images/dog collar.jpg" alt="Luxury Dog Collar">
+                <p class="item-name">Luxury Dog Collar</p>
+                <p class="item-price">£32.00</p>
+            </div>
+            <div class="item">
+                <img src="images/cat tower.jpg" alt="Cat Tower">
+                <p class="item-name">Cat Tower</p>
+                <p class="item-price">£70.00</p>
+            </div>
+        </section>
+
 </body>
 </html>
