--- a/public/basket.html
+++ b/public/basket.html
@@ -212,5 +212,26 @@
             </div>
         </section>
 
+        <aside class="order-summary">
+            <h2 class="summary-title">Order Summary</h2>
+            <div class="summary-details">
+                <p>Subtotal</p>
+                <p>£117.99</p>
+            </div>
+            <div class="summary-details">
+                <p>Shipping</p>
+                <p>£3.99</p>
+            </div>
+            <div class="summary-details">
+                <p>V.A.T</p>
+                <p>£2.00</p>
+            </div>
+            <div class="summary-details summary-total">
+                <p>Total</p>
+                <p>£123.98</p>
+            </div>
+            <button class="basket-button">Continue to Payment →</button>
+        </aside>
+    </main>
 </body>
 </html>
