--- a/public/index.html
+++ b/public/index.html
@@ -98,7 +98,7 @@
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-7">
-                    <div class="detail-box"> 
+                    <div class="detail-box" style="background-color: ;"> 
                       <h1>
                         Welcome To Our <br>
                         Pet Shop
@@ -353,16 +353,9 @@
 
 
 <section>
-  <div class="banner"> 
-  <img class="banner-img"
-  src=" images/dog1_img.JPG"
-  alt="banner-img">
-  <div class="banner-content">
-    <h4>Products for your pets you cant resist 
-    </h4>
-    <a id="shop-now" href="shop.html">buy now</a>
-  </div>
-  </div>
+  
+    <a id="shop-now" href="shop.html" >buy now</a>
+  
 </section>
 
 <section> </section>
