--- a/public/contact.html
+++ b/public/contact.html
@@ -70,7 +70,7 @@
                 Login
               </span>
             </a>
-            <a href="cart">
+            <a href="basket.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
