--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
           <span class=""></span>
         </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" id="navbarSupportedContent" style="background-color: #CFDCC0;">
           <ul class="navbar-nav  ">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
@@ -91,19 +91,19 @@
     <!-- slider section -->
 
     <section class="slider_section">
-      <div class="slider_container">
+      <div class="slider_container" style="background-color: #fefbe6;">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-7">
-                    <div class="detail-box" style="background-color: ;"> 
-                      <h1>
+                    <div class="detail-box"> 
+                      <h1 style="-webkit-text-fill-color: #294313;">
                         Welcome To Our <br>
                         Pet Shop
                       </h1>
-                      <p> 
+                      <p style="-webkit-text-fill-color: #294313;"> 
 
                         Your pets deserve the very best, and we’re here to deliver! Explore our wide range of stylish pet clothing, delicious treats, and essential supplies for cats and dogs. Whether you’re pampering your furry companion or stocking up on the basics, we’ve got everything you need to keep them happy, healthy, and looking their best.                      </p>
                       <a href="contact.html">
@@ -114,7 +114,7 @@
                     </div>
                   </div>
                   <div class="col-md-5 ">
-                    <div class="img-box">
+                    <div class="img-box" style="padding-top: 10px;">
                       <img src="images/mainbanner.jpg" alt="Pet Shop" class="img-fluid full-width-img">
                     </div>
                     </div>
@@ -135,7 +135,7 @@
 
   <!-- shop section -->
 
-  <section class="shop_section layout_padding">
+  <section class="shop_section layout_padding" style="padding-top: 20px;">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -152,7 +152,7 @@
             </div> 
               <div class="detail-box">
                 <h6>
-                bundle- dogfood
+                Bundle- Dogfood
                 </h6>
                 <h6>
                   Price
@@ -178,7 +178,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  bundle- catfood
+                  Bundle- Catfood
                 </h6>
                 <h6>
                   Price
@@ -203,7 +203,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  dog biscuits
+                  Dog biscuits
                 </h6>
                 <h6>
                   Price
@@ -228,7 +228,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat biscuits
+                  Cat biscuits
                 </h6>
                 <h6>
                   Price
@@ -253,7 +253,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  protein dog food 
+                  Protein dog food 
                 </h6>
                 <h6>
                   Price
@@ -278,7 +278,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  wet mixed dog food
+                  Wet mixed dog food
                 </h6>
                 <h6>
                   Price
@@ -303,7 +303,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  wet mixed cat food
+                  Wet mixed cat food
                 </h6>
                 <h6>
                   Price
@@ -328,7 +328,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat protein food
+                  Cat protein food
                 </h6>
                 <h6>
                   Price
@@ -354,80 +354,97 @@
 
 <section>
   
-    <a id="shop-now" href="shop.html" >buy now</a>
+  <div class="btn-box" style="padding-top: 0px">
+    <a href="shop1.html">
+      Buy Now
+    </a>
+  </div>
   
 </section>
 
 <section> </section>
- <!-- Testimonial Section -->
-<section class="testimonial_section">
-  
-    <div class="heading_container heading_center">
-      <h2>What Our Customers Say</h2>
-    </div>
-    <div class="swiper">
-      <div class="swiper-wrapper">
-        <!-- Testimonial 1 -->
-        <div class="swiper-slide">
-          <div class="testimonial_box">
-            <p>
-              "Pup&Purr has the best pet products! My dog loves his new toy, and the delivery was super fast. Highly recommend!"
-            </p>
-            <h5>- Sarah L.</h5>
+
+<!-- client review section -->
+<section class="client_section layout_padding" style="padding-top: 50px;">
+    
+  <div class="heading_container heading_center">
+    <h2>
+      Customer reviews
+    </h2>
+  </div>
+
+<div class="container px-0" style="padding-top: 20px;">
+  <div id="customCarousel2" class="carousel  carousel-fade" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <div class="box" style="background-color: #ffffff;">
+          <div class="client_info">
+            <div class="client_name">
+              <h5>
+                Emily R.
+              </h5>
+              <h6>
+                "Amazing quality and so cute!"
+              </h6>
+            </div>
+            <i class="fa fa-quote-left" aria-hidden="true"></i>
           </div>
+          <p>
+            I bought a sweater for my dog, and it’s absolutely adorable! The fabric is soft, durable, and fits perfectly. My pup loves it, and we’ve gotten so many compliments on our walks! 🐶              </p>
         </div>
-        <!-- Testimonial 2 -->
-        <div class="swiper-slide">
-          <div class="testimonial_box">
-            <p>
-              "I bought a bundle of treats for my cat and she can't get enough of them. Excellent quality and customer service!"
-            </p>
-            <h5>- John D.</h5>
-          </div>
-        </div>
-        <!-- Testimonial 3 -->
-        <div class="swiper-slide">
-          <div class="testimonial_box">
-            <p>
-              "Amazing experience shopping here! I found everything I needed for my pets at great prices."
-            </p>
-            <h5>- Emily W.</h5>
-          </div>
-        </div>
-        <!-- Add more testimonials as needed -->
       </div>
-      <!-- Add Navigation -->
-      <div class="swiper-button-next"></div>
-      <div class="swiper-button-prev"></div>
-      <!-- Add Pagination -->
-      <div class="swiper-pagination"></div>
+      <div class="carousel-item">
+        <div class="box" style="background-color: #ffffff;">
+          <div class="client_info">
+            <div class="client_name">
+              <h5>
+                Brian T.
+              </h5>
+              <h6>
+                "My cat can’t get enough of the treats!"
+              </h6>
+            </div>
+            <i class="fa fa-quote-left" aria-hidden="true"></i>
+          </div>
+          <p>
+            These treats have been a game-changer for training and rewarding my kitty. She’s super picky, but she goes crazy for these! I’m so happy to have found something she loves.  🐾              </p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="box" style="background-color: #ffffff;">
+          <div class="client_info">
+            <div class="client_name">
+              <h5>
+                Sophia M.
+              </h5>
+              <h6>
+                "Fast delivery and excellent service!"
+              </h6>
+            </div>
+            <i class="fa fa-quote-left" aria-hidden="true"></i>
+          </div>
+          <p>
+            I ordered a new bed for my dog, and it arrived the next day! The quality is fantastic, and the customer service team was so helpful. Highly recommend this shop! 🐕               </p>
+        </div>
+      </div>
+    </div>
+    <div class="carousel_btn-box">
+      <a class="carousel-control-prev" href="#customCarousel2" role="button" data-slide="prev">
+        <i class="fa fa-angle-left" aria-hidden="true"></i>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#customCarousel2" role="button" data-slide="next">
+        <i class="fa fa-angle-right" aria-hidden="true"></i>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
-</section>
-<!-- Include Swiper JS and CSS -->
-
-
-<link
-  rel="stylesheet"
-  href="https://unpkg.com/swiper/swiper-bundle.min.css"
-/>
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
-
-
-<script>
-  const swiper = new Swiper('.swiper', {
-    loop: true,
-    navigation: {
-      nextEl: '.swiper-button-next',
-      prevEl: '.swiper-button-prev',
-    },
-    pagination: {
-      el: '.swiper-pagination',
-      clickable: true,
-    },
-  });
-</script>
 </div>
+</section>
+<!-- end client review section -->
+
+</div>
+
 <section></section>
 
   <!-- info section -->
