--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,7 @@
                 Login
               </span>
             </a>
-            <a href="basket.php">
+            <a href="basket.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
@@ -91,7 +91,7 @@
     <!-- slider section -->
 
     <section class="slider_section">
-      <div class="slider_container">
+      <div class="slider_container" style="background-color: ;">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
