Linking Basket to other pages
Synced the basket page with the other pages - when basket icon is clicked, it now send user to the basket page

--- a/public/basket.html
+++ b/public/basket.html
@@ -184,7 +184,7 @@
             </div>
 
             <div class="navbar-icons">
-                <a href="account.html"><i class="fa fa-user"></i></a>
+                <a href="login.html"><i class="fa fa-user"></i></a>
                 <a href="basket.html"><i class="fa fa-shopping-basket"></i></a>
             </div>
         </nav>
