--- a/public/login.html
+++ b/public/login.html
@@ -56,7 +56,7 @@
               <i class="fa fa-user" aria-hidden="true"></i>
               <span>Login</span>
             </a>
-            <a href="cart">
+            <a href="basket.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline">
