--- a/public/why.html
+++ b/public/why.html
@@ -71,7 +71,7 @@
                 Login
               </span>
             </a>
-            <a href="cart">
+            <a href="basket.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
