--- a/public/basket.html
+++ b/public/basket.html
@@ -172,14 +172,14 @@
     <header>
         <nav class="navbar">
             <a class="navbar-brand" href="index.html">
-                <img src="images/logo.jpg" alt="Pup & Purr Logo">
+                <img src="images/logo.jpg" alt="Pup & Purr Logo" style="height: 75px;">
                 <span style="color: #426b1f; font-size: 28px; font-weight: bold;">Pup & Purr</span>
             </a>
 
             <div class="navbar-links">
                 <a href="index.html">Home</a>
                 <a href="shop.html">Shop</a>
-                <a href="about.html">About Us</a>
+                <a href="why.html">About Us</a>
                 <a href="contact.html">Contact Us</a>
             </div>
 
