--- a/public/cat.html
+++ b/public/cat.html
@@ -330,16 +330,16 @@
   <section class="info_section  layout_padding2-top">
     <div class="social_container">
       <div class="social_box">
-        <a href="">
+        <a href="https://facebook.com">
           <i class="fa fa-facebook" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://x.com">
           <i class="fa fa-twitter" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://instagram.com">
           <i class="fa fa-instagram" aria-hidden="true"></i>
         </a>
-        <a href="">
+        <a href="https://youtube.com/">
           <i class="fa fa-youtube" aria-hidden="true"></i>
         </a>
       </div>
@@ -352,8 +352,7 @@
               ABOUT US
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
-            </p>
+              We specialize in premium pet essentials, including stylish clothes, tasty treats, and everyday supplies for cats and dogs. Because they’re not just pets—they’re family. ❤️            </p>
           </div>
           <div class="col-md-6 col-lg-3">
             <div class="info_form ">
@@ -373,8 +372,7 @@
               NEED HELP?
             </h6>
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet, consectetur adipiscing elit, sed doLorem ipsum dolor sit amet,
-            </p>
+              We are here for you! Contact our friendly support team anytime for assistance with your orders or questions about our pet products.🐾            </p>
           </div>
           <div class="col-md-6 col-lg-3">
             <h6>
@@ -383,15 +381,15 @@
             <div class="info_link-box">
               <a href="">
                 <i class="fa fa-map-marker" aria-hidden="true"></i>
-                <span> Gb road 123 london Uk </span>
+                <span> 64 Aston Road Birmingham UK </span>
               </a>
               <a href="">
                 <i class="fa fa-phone" aria-hidden="true"></i>
-                <span>+01 12345678901</span>
+                <span>+44 (0)121 204 3001</span>
               </a>
               <a href="">
                 <i class="fa fa-envelope" aria-hidden="true"></i>
-                <span> demo@gmail.com</span>
+                <span> contact@pup&purr.com</span>
               </a>
             </div>
           </div>
@@ -403,13 +401,14 @@
       <div class="container">
         <p>
           &copy; <span id="displayYear"></span> All Rights Reserved By
-          <a href="https://html.design/">Free Html Templates</a>
+          <a href="https://html.design/">Pup&Purr</a>
         </p>
       </div>
     </footer>
     <!-- footer section -->
 
   </section>
+
 
   <!-- end info section -->
 
