--- a/public/contact.html
+++ b/public/contact.html
@@ -29,59 +29,195 @@
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
+<head>
+ 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pup & Purr - Basket</title>
+
+ 
+  <!-- main styles of the project -->
+  <link rel="stylesheet" href="css/style.css">
+
+  
+  <style>
+      body {
+          font-family: "Poppins", sans-serif;
+      }
+
+      /* the top header styles and designs  */
+      header {
+          background: #fefbe6;
+          padding: 10px 20px;
+          border-bottom: 2px solid #7b8e4e;
+      }
+
+      .navbar {
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+      }
+
+      .navbar-brand {
+          display: flex;
+          align-items: center;
+          gap: 10px;
+      }
+
+      .navbar-brand img {
+          height: 50px;
+      }
+
+      .navbar-links {
+          display: flex;
+          gap: 20px;
+      }
+
+      .navbar-links a {
+          text-decoration: none;
+          color: #426b1f;
+          font-size: 16px;
+          text-transform: uppercase;
+      }
+
+      .navbar-links a:hover {
+          font-weight: bold;
+      }
+
+      .navbar-icons {
+          display: flex;
+          gap: 15px;
+      }
+
+      .navbar-icons a {
+          color: #426b1f;
+          font-size: 18px;
+      }
+
+      /*The  Basket Page */
+      .basket-container {
+          margin: 0 auto;
+          max-width: 1200px;
+          padding: 50px 20px;
+          display: flex;
+          justify-content: space-between;
+          gap: 20px;
+      }
+
+      .basket-items,
+      .order-summary {
+          padding: 20px;
+          background: #fefefe;
+          border-radius: 10px;
+          box-shadow: 0 4px 8px rgba(123, 142, 78, 0.2);
+      }
+
+      .basket-items {
+          flex: 2;
+      }
+
+      .order-summary {
+          flex: 1;
+      }
+
+      .basket-title {
+          font-size: 28px;
+          color: #426b1f;
+          margin-bottom: 20px;
+      }
+
+      .item {
+          display: flex;
+          align-items: center;
+          justify-content: space-between;
+          border-bottom: 1px solid #ddd;
+          padding: 15px 0;
+      }
+
+      .item img {
+          width: 80px;
+          height: auto;
+          border-radius: 5px;
+      }
+
+      .item-name {
+          flex: 1;
+          margin: 0 20px;
+          font-size: 16px;
+          color: #333;
+      }
+
+      .item-price {
+          font-weight: bold;
+          color: #7b8e4e;
+      }
+
+      .summary-title {
+          font-size: 24px;
+          color: #426b1f;
+          margin-bottom: 15px;
+      }
+
+      .summary-details {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 10px;
+      }
+
+      .summary-total {
+          font-size: 18px;
+          font-weight: bold;
+          color: #426b1f;
+      }
+
+      .basket-button {
+          margin-top: 20px;
+          padding: 12px 20px;
+          font-size: 16px;
+          background: #426b1f;
+          color: #fff;
+          border: none;
+          border-radius: 5px;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+      }
+
+      .basket-button:hover {
+          background: #355716;
+      }
+
+      .basket-button span {
+          font-size: 18px;
+          margin-left: 10px;
+      }
+  </style>
+</head>
+
 <body>
   <div class="hero_area">
     <!-- header section strats -->
-    <header class="header_section" style="background-color: #fefbe6;">
-      <nav class="navbar navbar-expand-lg custom_nav-container">
-        <a class="navbar-brand" href="index.html">
-          <span style="color: #426b1f;">
-            Pup&Purr
-          </span>
-          <img src="images/logo.jpg" alt="Logo" style="height: 60px; margin-right: 10px;">
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class=""></span>
-        </button>
+    <header>
+      <nav class="navbar">
+          <a class="navbar-brand" href="index.html">
+              <img src="images/logo.jpg" alt="Pup & Purr Logo" style="height: 75px;">
+              <span style="color: #426b1f; font-size: 28px; font-weight: bold;">Pup & Purr</span>
+          </a>
 
-        <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent" style="background-color: #CFDCC0;">
-          <ul class="navbar-nav">
-            <li class="nav-item ">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="shop.html">
-                Shop
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="why.html">
-                About Us
-              </a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="contact.html">Get in Touch</a>
-            </li>
-          </ul>
-          <div class="user_option">
-            <a href="login.html">
-              <i class="fa fa-user" aria-hidden="true"></i>
-              <span>
-                Login
-              </span>
-            </a>
-            <a href="basket.html">
-              <i class="fa fa-shopping-bag" aria-hidden="true"></i>
-            </a>
-            <form class="form-inline ">
-              <button class="btn nav_search-btn" type="submit">
-                <i class="fa fa-search" aria-hidden="true"></i>
-              </button>
-            </form>
+          <div class="navbar-links">
+              <a href="index.html">Home</a>
+              <a href="shop.html">Shop</a>
+              <a href="why.html">About Us</a>
+              <a href="contact.html">Contact Us</a>
           </div>
-        </div>
+
+          <div class="navbar-icons">
+              <a href="login.html"><i class="fa fa-user"></i></a>
+              <a href="basket.html"><i class="fa fa-shopping-basket"></i></a>
+          </div>
       </nav>
-    </header>
+  </header>
     <!-- end header section -->
 
   </div>
