--- a/public/cat.html
+++ b/public/cat.html
@@ -36,7 +36,7 @@
   <div class="hero_area">
     <!-- header section strats -->
     <header class="header_section" style="background-color: #fefbe6;">
-      <nav class="navbar navbar-expand-lg custom_nav-container ">
+      <nav class="navbar navbar-expand-lg custom_nav-container">
         <a class="navbar-brand" href="index.html">
           <span style="color: #426b1f;">
             Pup&Purr
@@ -46,7 +46,7 @@
           <span class=""></span>
         </button>
 
-        <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent" style="background-color: #CFDCC0;">
           <ul class="navbar-nav  ">
             <li class="nav-item ">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
@@ -78,7 +78,7 @@
                 Login
               </span>
             </a>
-            <a href="">
+            <a href="basket.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
@@ -95,16 +95,10 @@
   </div>
   <!-- end hero area -->
 
-
-
-
-
-
-
   
   <!-- shop section -->
 
-  <section class="shop_section layout_padding">
+  <section class="shop_section layout_padding" style="padding-top: 48px;">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -121,7 +115,7 @@
             </div> 
               <div class="detail-box">
                 <h6>
-                bundle- catfood
+                Bundle- Catfood
                 </h6>
                 <h6>
                   Price
@@ -147,7 +141,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat biscuits
+                  Cat Biscuits
                 </h6>
                 <h6>
                   Price
@@ -172,7 +166,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  wet mixed cat food
+                  Wet Mixed Cat Food
                 </h6>
                 <h6>
                   Price
@@ -197,7 +191,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat protein food
+                  Cat Protein Food
                 </h6>
                 <h6>
                   Price
@@ -222,7 +216,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat toys 
+                  Cat Toys 
                 </h6>
                 <h6>
                   Price
@@ -247,7 +241,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                 cat shampoo
+                 Cat Shampoo
                 </h6>
                 <h6>
                   Price
@@ -272,7 +266,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat dental Products
+                  Cat Dental Products
                 </h6>
                 <h6>
                   Price
@@ -297,7 +291,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat bed
+                Cat Bed
                 </h6>
                 <h6>
                   Price
@@ -317,7 +311,7 @@
       </div>
       <div class="btn-box">
         <a href="shop.html">
-          return to products main page 
+          Return to Main Products Page 
         </a>
       </div>
     
