Changes to Dog page
Corrected grammatical errors and edited the spacing between the nav bar and the title for the page

--- a/public/dog.html
+++ b/public/dog.html
@@ -95,16 +95,10 @@
   </div>
   <!-- end hero area -->
 
-
-
-
-
-
-
   
   <!-- shop section -->
 
-  <section class="shop_section layout_padding">
+  <section class="shop_section layout_padding" style="padding-top: 48px;">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -121,7 +115,7 @@
             </div> 
               <div class="detail-box">
                 <h6>
-                bundle- dogfood
+                Bundle - Dogfood
                 </h6>
                 <h6>
                   Price
@@ -147,7 +141,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  dog biscuits
+                  Dog Biscuits
                 </h6>
                 <h6>
                   Price
@@ -172,7 +166,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  protein dog food
+                  Protein Dog Food
                 </h6>
                 <h6>
                   Price
@@ -197,7 +191,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat biscuits
+                  Dog Biscuits
                 </h6>
                 <h6>
                   Price
@@ -222,7 +216,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  dog toys 
+                  Dog Toys 
                 </h6>
                 <h6>
                   Price
@@ -247,7 +241,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                 dog shampoo
+                 Dog Shampoo
                 </h6>
                 <h6>
                   Price
@@ -272,7 +266,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                 dog bed
+                 Dog Bed
                 </h6>
                 <h6>
                   Price
@@ -297,7 +291,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                 dog dental products
+                 Dog Dental Products
                 </h6>
                 <h6>
                   Price
@@ -319,7 +313,7 @@
       
       <div class="btn-box">
         <a href="shop.html">
-          return to products main page 
+          Return to Main Products Page 
         </a>
       </div>
 
