--- a/public/shop.html
+++ b/public/shop.html
@@ -55,8 +55,8 @@
           <li class="nav-item dropdown">
               <a class="nav-link dropbtn" href="shop.html">Shop</a>
               <ul class="dropdown-menu">
-                  <li><a href="cat.html" class="dropdown-item">cats</a></li>
-                  <li><a href="dog.html" class="dropdown-item">dogs</a></li>
+                  <li><a href="cat.html" class="dropdown-item">Cats</a></li>
+                  <li><a href="dog.html" class="dropdown-item">Dogs</a></li>
                   
               </ul>
           </li>
@@ -97,7 +97,7 @@
 
 
 
-  <section class="shop_section layout_padding">
+  <section class="shop_section layout_padding" style="padding-top: 48px;">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -114,7 +114,7 @@
             </div> 
               <div class="detail-box">
                 <h6>
-                bundle- dogfood
+                Bundle - Dogfood
                 </h6>
                 <h6>
                   Price
@@ -140,7 +140,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  bundle- catfood
+                  Bundle - Catfood
                 </h6>
                 <h6>
                   Price
@@ -165,7 +165,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  dog biscuits
+                  Dog Biscuits
                 </h6>
                 <h6>
                   Price
@@ -190,7 +190,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat biscuits
+                  Cat Biscuits
                 </h6>
                 <h6>
                   Price
@@ -215,7 +215,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  protein dog food 
+                  Protein Dog Food 
                 </h6>
                 <h6>
                   Price
@@ -240,7 +240,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  wet mixed dog food
+                  Wet Mixed Dog Food
                 </h6>
                 <h6>
                   Price
@@ -265,7 +265,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  wet mixed cat food
+                  Wet Mixed Cat Food
                 </h6>
                 <h6>
                   Price
@@ -290,7 +290,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat protein food
+                  Cat Protein Food
                 </h6>
                 <h6>
                   Price
