--- a/public/shop1.html
+++ b/public/shop1.html
@@ -46,7 +46,7 @@
           <span class=""></span>
         </button>
 
-        <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse innerpage_navbar" id="navbarSupportedContent" style="background-color: #CFDCC0;">
           <ul class="navbar-nav  ">
             <li class="nav-item ">
               <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
@@ -55,8 +55,8 @@
         <li class="nav-item dropdown">
             <a class="nav-link dropbtn" href="shop.html">Shop</a>
             <ul class="dropdown-menu">
-                <li><a href="cat.html" class="dropdown-item">cats</a></li>
-                <li><a href="dog.html" class="dropdown-item">dogs</a></li>
+                <li><a href="cat.html" class="dropdown-item">Cats</a></li>
+                <li><a href="dog.html" class="dropdown-item">Dogs</a></li>
                 
             </ul>
         </li>
@@ -95,15 +95,10 @@
   <!-- end hero area -->
 
 
-
-
-
-
-
   
   <!-- shop section -->
 
-  <section class="shop_section layout_padding">
+  <section class="shop_section layout_padding" style="padding-top: 48px;">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
@@ -120,7 +115,7 @@
             </div> 
               <div class="detail-box">
                 <h6>
-                bundle- dogfood
+                Bundle - Dogfood
                 </h6>
                 <h6>
                   Price
@@ -146,7 +141,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  bundle- catfood
+                  Bundle - Catfood
                 </h6>
                 <h6>
                   Price
@@ -171,7 +166,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  dog biscuits
+                  Dog Biscuits
                 </h6>
                 <h6>
                   Price
@@ -196,7 +191,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat biscuits
+                  Cat Biscuits
                 </h6>
                 <h6>
                   Price
@@ -221,7 +216,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  protein dog food 
+                  Protein Dog Food 
                 </h6>
                 <h6>
                   Price
@@ -246,7 +241,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  wet mixed dog food
+                  Wet Mixed Dog Food
                 </h6>
                 <h6>
                   Price
@@ -271,7 +266,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  wet mixed cat food
+                  Wet Mixed Cat Food
                 </h6>
                 <h6>
                   Price
@@ -296,7 +291,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat protein food
+                  Cat Protein Food
                 </h6>
                 <h6>
                   Price
@@ -325,7 +320,7 @@
             </div> 
               <div class="detail-box">
                 <h6>
-                dog toys
+                Dog Toys
                 </h6>
                 <h6>
                   Price
@@ -350,7 +345,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat toys
+                  Cat Toys
                 </h6>
                 <h6>
                   Price
@@ -375,7 +370,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  dog shampoo
+                  Dog Shampoo
                 </h6>
                 <h6>
                   Price
@@ -400,7 +395,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat shampoo
+                  Cat Shampoo
                 </h6>
                 <h6>
                   Price
@@ -425,7 +420,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                 dog bed 
+                 Dog Bed 
                 </h6>
                 <h6>
                   Price
@@ -450,7 +445,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat bed
+                  Cat Bed
                 </h6>
                 <h6>
                   Price
@@ -475,7 +470,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  cat dental products
+                  Cat Dental Products
                 </h6>
                 <h6>
                   Price
@@ -500,7 +495,7 @@
               </div>
               <div class="detail-box">
                 <h6>
-                  dog dental products
+                  Dog Dental Products
                 </h6>
                 <h6>
                   Price
@@ -521,7 +516,7 @@
 
       <div class="btn-box">
         <a href="shop.html">
-          View less Products
+          View Less Products
         </a>
       </div>
     </div>
