--- a/public/index.html
+++ b/public/index.html
@@ -250,11 +250,11 @@
                       </a>
                     </div>
                   </div>
-                  <div class="col-md-5 ">
-                    <div class="img-box" style="padding-top: 10px;">
-                      <img src="images/mainbanner.jpg" alt="Pet Shop" class="img-fluid full-width-img">
+                  <div class="col-md-5">
+                    <div class="img-box" style="padding-top: 10px; position: relative;">
+                      <img src="images/logo.jpg" alt="Pet Shop" class="img-fluid" style="width: 100%; height: auto; position: relative; left: -20px; top: 10px;">
                     </div>
-                    </div>
+                  </div>
                   </div>
                 </div>
               </div>
