--- a/public/dog.html
+++ b/public/dog.html
@@ -55,8 +55,8 @@
         <li class="nav-item dropdown">
             <a class="nav-link dropbtn" href="shop.html">Shop</a>
             <ul class="dropdown-menu">
-                <li><a href="cat.html" class="dropdown-item">cats</a></li>
-                <li><a href="dog.html" class="dropdown-item">dogs</a></li>
+                <li><a href="cat.html" class="dropdown-item">Cats</a></li>
+                <li><a href="dog.html" class="dropdown-item">Dogs</a></li>
                 
             </ul>
         </li>
