--- a/public/index.html
+++ b/public/index.html
@@ -225,7 +225,7 @@
 
     <!-- slider section -->
 
-    <section class="slider_section"  style="padding-top: 0px;">
+    <section class="slider_section"  style="padding-top: 0px;" style="padding-bottom: 0px;">
       <div class="slider_container" style="background-color: #fefbe6;">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
@@ -272,14 +272,14 @@
 
   <!-- shop section -->
 
-  <section class="shop_section layout_padding" style="padding-top: 20px;">
+  <section class="shop_section layout_padding" style="padding-top: 0px;">
     <div class="container">
       <div class="heading_container heading_center">
         <h2>
           Latest Products
         </h2>
       </div>
-      <div class="row">
+      <div class="row" style="padding-top: 20px;">
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
             <a href="p1.html">
@@ -506,7 +506,7 @@
     
   <div class="heading_container heading_center">
     <h2>
-      Customer reviews
+      Our Customer reviews
     </h2>
   </div>
 
