--- a/public/basket.html
+++ b/public/basket.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pup & Purr - Basket</title>
+    <link rel="shortcut icon" href="images/logo.jpg" type="image/x-icon">
 
    
     <!-- main styles of the project -->
