Linked to Basket
Linked basket icon on the dog, cat and shop page to go to the correct basket page (basket.html)

--- a/public/shop1.html
+++ b/public/shop1.html
@@ -77,7 +77,7 @@
                 Login
               </span>
             </a>
-            <a href="">
+            <a href="basket.html">
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
