--- a/public/index.html
+++ b/public/index.html
@@ -75,11 +75,11 @@
                 Login
               </span>
             </a>
-<<<<<<< HEAD
+
             <a href="basket.html">
-=======
+
             <a href="cart">
->>>>>>> 3bb708adde50ecdaae18512a9bbd5d66ef4ac065
+
               <i class="fa fa-shopping-bag" aria-hidden="true"></i>
             </a>
             <form class="form-inline ">
@@ -95,11 +95,11 @@
     <!-- slider section -->
 
     <section class="slider_section">
-<<<<<<< HEAD
-      <div class="slider_container" style="background-color: ;">
-=======
+
+      <div class="slider_container" style="background-color:#fefbe6 ;">
+
       <div class="slider_container" style="background-color: #fefbe6;">
->>>>>>> 3bb708adde50ecdaae18512a9bbd5d66ef4ac065
+
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
@@ -371,13 +371,11 @@
 </section>
 
 <section> </section>
-
-<!-- client review section -->
-<section class="client_section layout_padding" style="padding-top: 50px;">
+<section class="client_section layout_padding" style="padding-top: 10px;">
     
   <div class="heading_container heading_center">
     <h2>
-      Customer reviews
+      Reviews
     </h2>
   </div>
 
@@ -389,16 +387,16 @@
           <div class="client_info">
             <div class="client_name">
               <h5>
-                Emily R.
+                Harry M
               </h5>
               <h6>
-                "Amazing quality and so cute!"
+                "You cannot go wrong with these products"
               </h6>
             </div>
             <i class="fa fa-quote-left" aria-hidden="true"></i>
           </div>
           <p>
-            I bought a sweater for my dog, and it’s absolutely adorable! The fabric is soft, durable, and fits perfectly. My pup loves it, and we’ve gotten so many compliments on our walks! 🐶              </p>
+            "I recently bought a puppy and purchased come products from this website. May i say not a penny gone to waste.""           </p>
         </div>
       </div>
       <div class="carousel-item">
@@ -406,16 +404,17 @@
           <div class="client_info">
             <div class="client_name">
               <h5>
-                Brian T.
+                Brian H.
               </h5>
               <h6>
-                "My cat can’t get enough of the treats!"
+                "these products blew my mind away"
               </h6>
             </div>
             <i class="fa fa-quote-left" aria-hidden="true"></i>
           </div>
           <p>
-            These treats have been a game-changer for training and rewarding my kitty. She’s super picky, but she goes crazy for these! I’m so happy to have found something she loves.  🐾              </p>
+            "Ive purchased items from other pet websites but none seemed to do the job. After buying the cat bed for my kitten, it shocked my how the quality was so good."
+          </p>
         </div>
       </div>
       <div class="carousel-item">
@@ -423,16 +422,16 @@
           <div class="client_info">
             <div class="client_name">
               <h5>
-                Sophia M.
+                Sarah L.
               </h5>
               <h6>
-                "Fast delivery and excellent service!"
+                " excellent service!"
               </h6>
             </div>
             <i class="fa fa-quote-left" aria-hidden="true"></i>
           </div>
           <p>
-            I ordered a new bed for my dog, and it arrived the next day! The quality is fantastic, and the customer service team was so helpful. Highly recommend this shop! 🐕               </p>
+            "Had i have known this pet website offered 0 shipping fee and fast delivery i would have been buying from this store years ago" </p>
         </div>
       </div>
     </div>
@@ -449,6 +448,10 @@
   </div>
 </div>
 </section>
+<!-- end client review section -->
+
+<!-- client review section --> 
+            
 <!-- end client review section -->
 
 </div>
