--- a/public/p3.html
+++ b/public/p3.html
@@ -95,16 +95,15 @@
     <div class="row">
       <!-- Product Image -->
       <div class="col-md-6">
-        <img src="images/p3.jpg" class="product-image w-100" alt="Bundle Dog Food">
+        <img src="images/p3.jpg" class="product-image w-100" alt=" Dog Biscuits">
       </div>
 
       <!-- Product Details -->
       <div class="col-md-6">
         <div class="product-details">
-          <h1>Bundle Dog Food</h1>
-          <h3 class="text-success">£25.99</h3>
-          <p>High-quality dog food to keep your pet healthy and happy. Packed with nutrients and taste your dog will love!</p>
-
+          <h1> Dog Biscuits</h1>
+          <h3 class="text-success">£10</h3>
+<p>Treats for your dogs that would have your pet wanting to try again</p>
           <!-- Product Options -->
           <div class="product-options">
             <!-- Quantity -->
@@ -153,7 +152,7 @@
       </ul>
       <div class="tab-content" id="productTabContent">
         <div class="tab-pane fade show active" id="description" role="tabpanel" aria-labelledby="description-tab">
-          <p class="mt-3">This premium dog food is designed to meet the highest nutritional standards. Perfect for active dogs and those with special dietary needs.</p>
+          <p class="mt-3">This premium dog snack is designed to meet the highest nutritional standards. Perfect for active dogs and those with special dietary needs.</p>
         </div>
         <div class="tab-pane fade" id="reviews" role="tabpanel" aria-labelledby="reviews-tab">
           <p class="mt-3">No reviews yet. Be the first to review this product!</p>
