--- a/public/p6.html
+++ b/public/p6.html
@@ -101,8 +101,8 @@
       <!-- Product Details -->
       <div class="col-md-6">
         <div class="product-details">
-          <h1>Bundle Dog Food</h1>
-          <h3 class="text-success">£25.99</h3>
+          <h1>Wet Mixed Dog Food</h1>
+          <h3 class="text-success">£10</h3>
           <p>High-quality dog food to keep your pet healthy and happy. Packed with nutrients and taste your dog will love!</p>
 
           <!-- Product Options -->
