changed the button so it works

--- a/public/basket.html
+++ b/public/basket.html
@@ -230,7 +230,7 @@
                 <p>Total</p>
                 <p>£123.98</p>
             </div>
-            <button class="basket-button">Continue to Checkout →</button>
+            <a href="checkout" class="basket-button">Continue to Checkout →</a>
         </aside>
     </main>
 </body>
