Changes to Sign up page
Edited the sign up page to match the layout of the login page - where it is in a box (also made a minor change in font and size to the login page)

--- a/public/login.html
+++ b/public/login.html
@@ -222,7 +222,7 @@
     <!-- Login Form Section -->
     <section style="padding-top: 48px; font-family: 'Poppins', Arial, sans-serif; background-color: #fff9e6; padding-bottom: 48px;">
       <div style="max-width: 400px; margin: 0 auto; text-align: center;">
-        <h2 style="font-size: 35px; font-weight: 700; margin-bottom: 12px; color: #000;">Log In</h2>
+        <h2 style="font-size: 28px; font-weight: 700; margin-bottom: 12px; color: #000;">LOG IN</h2>
         <p style="font-size: 16px; margin-bottom: 24px; color: #333;">Access your account to explore exclusive offers and manage your orders.</p>
         <form action="/login" method="POST" style="background-color: #ffffff; padding: 24px; border-radius: 8px; box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);">
           <div style="margin-bottom: 16px; text-align: left;">
