--- a/public/basket.html
+++ b/public/basket.html
@@ -230,7 +230,7 @@
                 <p>Total</p>
                 <p>£123.98</p>
             </div>
-            <button class="basket-button">Continue to Checkout →</button>
+            <button class="basket-button" href="checkout.php">Continue to Checkout →</button>
         </aside>
     </main>
 </body>
