--- a/public/index.html
+++ b/public/index.html
@@ -245,29 +245,25 @@
   <!-- end hero area -->
 
 
-    <section class="slider_section">
-      <div class="slider_container" style="background-color: #fefbe6;">
+    <section class="slider_section" style="padding-top: 0; margin-top: 0;">
+      <div class="slider_container" style="background-color: #fefbe6; padding-top: 0; margin-top: 0;">
 
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" style="margin-top: 0;">
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="container-fluid">
                 <div class="row">
                   <div class="col-md-7">
                     <div class="detail-box"> 
-                      <h1 style="-webkit-text-fill-color: #355716;">
+                      <h1 style="-webkit-text-fill-color: #355716; margin-top: 0; margin-bottom: 10px;"">
                         Welcome To Our <br>
                         Pet Shop
                       </h1>
                       <p></p>
-                      <p></p>
-                      <p style="-webkit-text-fill-color: #294313;"> 
-
+                      <p style="-webkit-text-fill-color: #294313; margin-top: 0;"> 
                         Your pets deserve the very best, and we’re here to deliver! Explore our wide range of stylish pet clothing, delicious treats, and essential supplies for cats and dogs. Whether you’re pampering your furry companion or stocking up on the basics, we’ve got everything you need to keep them happy, healthy, and looking their best.                      </p>
                       <a href="contact.html">
                         Contact Us
-
-              
                       </a>
                     </div>
                   </div>
