This commit fixed the positioning of the search bar and realigned it so it was under nav bar

--- a/public/shop1.html
+++ b/public/shop1.html
@@ -208,8 +208,7 @@
   </style>
 </head>
 
-<!DOCTYPE html>
-<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -277,15 +276,8 @@
     </style>
 </head>
 <body>
-    <!-- Search Bar and Filter Button -->
-    <form method="GET" action="{{ route('product.search') }}">
-        <input type="text" name="q" placeholder="Search products...">
-        <button type="submit">Search</button>
-    </form>
-    <a href="#" class="filter-btn">Filter by category</a>
-</body>
-</html>
-
+  </body><div></div>
+  
 <body>
   <div class="hero_area">
     <!-- header section strats -->
@@ -323,7 +315,15 @@
   <!-- end hero area -->
 
 
-  
+    <!-- Search Bar and Filter Button -->
+    <form method="GET" action="{{ route('product.search') }}">
+      <input type="text" name="q" placeholder="Search products...">
+      <button type="submit">Search</button>
+  </form>
+  <a href="#" class="filter-btn">Filter by category</a>
+</body>
+</html>
+
   <!-- shop section -->
 
   <section class="shop_section layout_padding" style="padding-top: 48px;">
