location changed in 'about us' to reference correct basket page

--- a/public/why.html
+++ b/public/why.html
@@ -289,7 +289,7 @@
     
               <div class="navbar-icons">
                   <a href="login.html"><i class="fa fa-user"></i></a>
-                  <a href="basket.html"><i class="fa fa-shopping-basket"></i></a>
+                  <a href="basket"><i class="fa fa-shopping-basket"></i></a>
               </div>
           </nav>
       </header>
