--- a/public/shop.html
+++ b/public/shop.html
@@ -440,7 +440,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="p5.html">
+            <a href="product/product5">
               <div class="img-box">
                 <img src="images/p5.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -465,7 +465,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="p6.html">
+            <a href="product/product6">
               <div class="img-box">
                 <img src="images/p6.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -490,7 +490,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="p7.html">
+            <a href="product/product7">
               <div class="img-box">
                 <img src="images/p7.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
@@ -515,7 +515,7 @@
         </div>
         <div class="col-sm-6 col-md-4 col-lg-3">
           <div class="box">
-            <a href="p8.html">
+            <a href="product/product8">
               <div class="img-box">
                 <img src="images/p8.jpg" alt="p2" style="width: 100%; height: auto;"></src>
               </div>
