fixed positioning of search bars

--- a/public/shop.html
+++ b/public/shop.html
@@ -323,7 +323,7 @@
   <input type="text" name="q" placeholder="Search products...">
   <button type="submit">Search</button>
 </form>
-<a href="#" class="filter-btn">Filter by category</a>
+<!--<a href="#" class="filter-btn">Filter by category</a>
 </body>
 </html>
 
