--- a/public/shop1.html
+++ b/public/shop1.html
@@ -320,9 +320,11 @@
       <input type="text" name="q" placeholder="Search products...">
       <button type="submit">Search</button>
   </form>
-  <a href="#" class="filter-btn">Filter by category</a>
+ <!-- <a href="#" class="filter-btn">Filter by category</a>
 </body>
 </html>
+
+</div>
 
   <!-- shop section -->
 
