--- a/public/why.html
+++ b/public/why.html
@@ -261,14 +261,7 @@
         </style>
     </head>
     <body>
-        <!-- Search Bar and Filter Button -->
-        <form method="GET" action="{{ route('product.search') }}">
-            <input type="text" name="q" placeholder="Search products...">
-            <button type="submit">Search</button>
-        </form>
-        <a href="#" class="filter-btn">Filter by category</a>
-    </body>
-    </html>
+      
 
     <body>
       <div class="hero_area">
@@ -301,7 +294,7 @@
     <input type="text" name="q" placeholder="Search products...">
     <button type="submit">Search</button>
 </form>
-<a href="#" class="filter-btn">Filter by category</a>
+<!--<a href="#" class="filter-btn">Filter by category</a>
 </body>
 </html>
  <!-- about us section -->
